Themes: Turns out that using 'line-height: 1.2' puts gaps between background colors so I've changed it to 1.1.  The │ character still has gaps between lines but I'll probably fix that by editing the font since no other fonts I've tested with seem to have that problem.  It appears to be a bug in Ubuntu Mono (a font bug, who knew?).

--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -187,10 +187,10 @@ hr {
     outline: none;
     resize: none;
     font-family: 'Ubuntu Mono', monospace; /* For consistency */
-    line-height: 1.2;
+    line-height: 1.1;
 }
 #{{container}} .terminal {
-    line-height: 1.2;
+    line-height: 1.1;
     background-color: #000; /* Black - dark black! */
     color: #fff;
     position: static;
@@ -210,7 +210,7 @@ hr {
 #{{container}} .terminal pre {
     font-family: 'Ubuntu Mono', monospace;
     font-size: 0.9em; /* For some reason when you use a .woff font it seems to show up slightly larger than it would normally */
-    line-height: 1;
+    line-height: 1.1;
     /*height: auto;*/ /* Needs to be 100% when scrollback is enabled */
     width: 100%;
     overflow-y: auto;
